Fix for keyboard not showing on mobile

--- a/SimpleTextEditor/TextEditor.razor.css
+++ b/SimpleTextEditor/TextEditor.razor.css
@@ -24,6 +24,7 @@
     border: 1px solid #ccc;
     margin-top: 1rem;
     margin-bottom: 1rem;
+    caret-color: transparent;
 }
 
 @keyframes cursor-blink {
